--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
           <button class="blue_button">BY TOKEN NOW</button>
         </div>
       </div>
-      <div class="pie">
+<!--       <div class="pie">
         <div>
           <div class="chart">
             <h3 class="h3">Funding Allocation</h3>
@@ -331,12 +331,12 @@
               <li>15% Funding</li>
             </ul>
           </div>
-        </div>
-        <div class="chart" style="background-color: #0c3251">
+        </div> -->
+<!--         <div class="chart" style="background-color: #0c3251">
           <h3 class="h3">Token Allocation</h3>
-          <img src="download (1).png" class="circle" width="300px" />
+          <img src="download (1).png" class="circle" width="300px" /> -->
           <!--updated width from 500 -->
-          <img src="pie-chart-2.png" class="piechart-2" width="150px" />
+<!--           <img src="pie-chart-2.png" class="piechart-2" width="150px" />
           <ul>
             <li>12% Reserved Funding</li>
             <li>8% Product Development</li>
@@ -345,7 +345,7 @@
             <li>15% Funding</li>
           </ul>
         </div>
-      </div>
+      </div> -->
 
       <!-- frame-----5 -->
 
