--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
             <h3 class="h3">Funding Allocation</h3>
             <img src="download.png" class="circle" width="300px" />
             <!--updated width from 500 -->
-            <img src="pie-char-1.png" alt="" class="piechart-1" width="100px" />
+<!--             <img src="pie-char-1.png" alt="" class="piechart-1" width="100px" />
             <ul>
               <li>12% Reserved Funding</li>
               <li>8% Product Development</li>
@@ -331,7 +331,7 @@
               <li>15% Funding</li>
             </ul>
           </div>
-        </div> -->
+        </div> --> -->
 <!--         <div class="chart" style="background-color: #0c3251">
           <h3 class="h3">Token Allocation</h3>
           <img src="download (1).png" class="circle" width="300px" /> -->
